<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginVertical="@dimen/margin_10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/imageCardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="@dimen/cardcornerradius_20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/character_image"
                android:layout_width="match_parent"
                android:layout_height="@dimen/zero_dp"
                app:layout_constraintDimensionRatio="1:1.1"
                android:scaleType="fitXY"
                android:contentDescription="@string/character_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/character_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/textview_margin_vertical"
        android:layout_marginTop="@dimen/margin_10dp"
        android:text="@string/character_name_harry_potter"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:textSize="@dimen/textsize_18sp"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageCardview" />

    <TextView
        android:id="@+id/character_actor_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/textview_margin_vertical"
        android:layout_marginTop="@dimen/margin_5dp"
        android:text="@string/charactor_actor_daniel_radcliffe"
        android:textColor="@android:color/black"
        android:textSize="@dimen/textsize_16dp"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/character_name" />

</androidx.constraintlayout.widget.ConstraintLayout>